# risurealm_search

./: .dockerignore  .env.example  .gitattributes  .gitignore  DETAILS.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_models.py
.github/workflows/: docker-publish.yml
api/: __init__.py  app.py
data/: batch_input.jsonl  batch_output.jsonl  batch_progress.json  characters.jsonl  list_nsfw.jsonl  list_sfw.jsonl  progress.json  tagged.jsonl  tagging_progress.json  types.json
data/chroma_db/: chroma.sqlite3
data/chroma_db/2a890249-66b2-4767-b1fb-9d60f36897dc/: index_metadata.pickle
data/chroma_db/58813322-73b7-4fc4-a627-b78306831e1b/: index_metadata.pickle
data/chroma_db/5f177bc3-aa50-4992-97c4-17f6be0a3c7e/: index_metadata.pickle
data/chroma_db/64ae97f8-a969-4cd3-a28e-406578931819/: index_metadata.pickle
data/chroma_db/7765ba19-284f-4b05-a658-b50107649f8f/: index_metadata.pickle
data/chroma_db/7ee1243b-d739-471b-b2de-6c8b3a0e39ab/: index_metadata.pickle
data/chroma_db/8c85db6f-9e3f-46a7-9fc5-209707c05a26/: index_metadata.pickle
data/chroma_db/c0950524-ec51-4d45-beb8-db45f4604f7c/: index_metadata.pickle
scraper/: __init__.py  client.py  models.py  scraper.py  utils.py
searcher/: __init__.py  bm25.py  embedder.py  indexer.py  models.py  searcher.py  synonyms.py
tagger/: __init__.py  batch.py  client.py  models.py  tagger.py
ui/: __init__.py  app.py
